# ai-bankruptcy-drafts

./: README.md
backend/: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Chat DB.session.sql  Dockerfile  Dockerfile.taskiq  Dockerfile.taskiq-scheduler  README.md  docker-compose.yml  pyproject.toml  run-local.sh  run_migrations.sh  test_core.sh  wait-for-it.sh
backend/.github/workflows/: deploy.yml  test.yml
backend/docs/: ARCHITECTURE.md  PAYWALL_PLAN.md  PHASE3_IMPLEMENTATION.md  PHASE3_REGISTRATION_UPDATE.md  PHASE3_TESTING.md  PHASE4_IMPLEMENTATION.md  test_resend.py
backend/migrations/: README.md  __init__.py  add_allowed_domain_to_firms.py  add_approval_token_to_users.py  add_billing_tables.py  add_case_inbox_dedup_unique_indexes.py  add_case_number_to_threads.py  add_collaboration_tables.py  add_cos_type_to_motion_draft_logs.py  add_dashboard_chat_messages.py  add_district_to_chat_threads.py  add_email_verification_to_users.py  add_firm_id_to_chatbot_tables.py  add_firm_profile_fields.py  add_is_accepted_to_users.py  add_is_viewed_to_courtdrive_ingestions.py  add_matches_unfiled_case_id_to_case_inbox.py  add_onboarding_status_to_firms.py  add_password_reset_to_users.py  add_paywall_db_schema.py  add_paywall_enabled_to_firm_settings.py  add_pending_session_file_locks.py  add_session_metadata.py  add_settings_audit_log_table.py  add_settings_notification_collab_flags.py  add_settings_tables.py  add_source_to_pdf_documents.py  add_studio_v2_tables.py  add_unfiled_petition_support_to_cases.py  add_user_activity_logs.py  backfill_chatbot_firm_ids.py  normalize_case_numbers.py  relax_activity_log_firm_id_not_null.py  relax_users_firm_id_not_null.py  remove_duplicate_pdf_documents.py
backend/src/: ai_models.py  config.py  main.py  schema.py  taskiq_app.py  taskiq_client.py  taskiq_scheduler.py
backend/src/auth/: __init__.py  admin_routes.py  auth.py  database.py  models.py  routes.py  service.py
backend/src/billing/: models.py  routes.py  seed.py  service.py  webhook.py
backend/src/chatbot/: __init__.py  agent.py  custom_assistant.py  database.py  models.py  page_splitter.py  parallel_reviewer.py  pending_petitions.py  petition_vision_extractor.py  routes.py  routes_chat.py  routes_pdf.py  routes_sessions.py  routes_threads.py  service.py  vectorestore.py
backend/src/collaboration/: models.py  routes.py  service.py
backend/src/common/: __init__.py  audit.py  dependencies.py
backend/src/core/: router.py
backend/src/courtdrive/: __init__.py  ingestion_db.py  petition_extractor.py  routes.py  service.py
backend/src/firms/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/src/gmail/: auth.py  court_mail.py  drive_service.py  extractor.py  poll_worker.py  routes.py  service.py  workflow_services.py
backend/src/motion_filling/: __init__.py  fill_ex_parte_motion_extension.py  fill_motion_claim.py  fill_motion_delay.py  fill_motion_extend.py  fill_motion_loe.py  fill_motion_modify.py  fill_motion_order_delay.py  fill_motion_order_extension.py  fill_motion_reinstate.py  fill_motion_service.py  fill_motion_suggestion.py  pdf_utils.py  (+14 more)
backend/tests/: test_pending_petitions.py  test_petition_filename_pattern.py  test_poll_worker.py  test_workflow_services.py
(+1045 files in other folders)
